--- a/templates/reportes/contables/libro_iva_ventas.html
+++ b/templates/reportes/contables/libro_iva_ventas.html
@@ -61,6 +61,8 @@
                                                     <th >Comprobante</th>
                                                     <th class="text-center">Nº CAE</th>                                
                                                     <th >Cliente</th>                                                                    
+                                                    <th >DNI/CUIT</th>
+                                                    <th >Condic.</th>
                                                     <th class="text-right">Gravado</th>
                                                     <th class="text-right">IVA</th>                                
                                                     <th class="text-right">Perc/Imp.</th>                                                            
@@ -78,7 +80,9 @@
                                                     <td title="{{ cpb.cpb_tipo}}">{{ cpb.cpb_tipo.codigo|default_if_none:'' }}</td>
                                                     <td >{{ cpb.get_cpb }}</td>                                
                                                     <td  {% if cpb.cae %}title="Vencimiento CAE: {{cpb.cae_vto|date:'d/m/Y'}}" class="listado_estado success"{% endif %}> {{cpb.cae|default_if_none:''}}</td>       
-                                                    <td  title="{{ cpb.entidad}}" ><strong>{{ cpb.entidad|truncatechars:60 }}</strong></td>
+                                                    <td  title="{{ cpb.entidad}}" ><strong>{{ cpb.entidad.apellido_y_nombre|truncatechars:60 }}</strong></td>
+                                                    <td ><strong>{{ cpb.entidad.get_nro_doc_cuit|default_if_none:'' }}</strong></td>
+                                                    <td ><strong>{{ cpb.entidad.get_categFiscal|default_if_none:'' }}</strong></td>
                                                     <td class="importe">${{cpb.get_importe_gravado|default_if_none:0|floatformat:2}}</td>
                                                     <td class="importe">${{cpb.get_importe_iva|default_if_none:0|floatformat:2}}</td>
                                                     <td class="importe">${{cpb.get_importe_perc_imp|default_if_none:0|floatformat:2}}</td>
@@ -96,6 +100,8 @@
                                                     <th></th> 
                                                     <th></th> 
                                                     <th></th>                                 
+                                                    <th></th>
+                                                    <th></th>
                                                     <th></th>
                                                     <th class="importe"></th>                                 
                                                     <th class="importe"></th>                                 
@@ -127,7 +133,9 @@
                                                     <th class="text-center">F.Imputac.</th>  
                                                     <th></th>
                                                     <th >Comprobante</th>
-                                                    <th >Proveedor</th> 
+                                                    <th >Cliente</th>
+                                                    <th >DNI/CUIT</th>
+                                                    <th >Condic.</th>
                                                     <th class="text-right">Importe</th>
                                                     <th class="text-right">% IVA</th>                                                                
                                                     <th class="text-right">Total</th>                                                                      
@@ -139,7 +147,9 @@
                                                     <td title="{{cpb.pk|safe}}" class="text-center">{{ a.cpb_comprobante.fecha_imputacion|date:'d/m/Y' }}</td>
                                                     <td class="text-center" title="{{ a.cpb_comprobante.cpb_tipo}}">{{ a.cpb_comprobante.cpb_tipo.codigo|default_if_none:'' }}</td>
                                                     <td >{{ a.cpb_comprobante.get_cpb}}</td>                                
-                                                    <td  title="{{ a.cpb_comprobante.entidad}}" ><strong>{{ a.cpb_comprobante.entidad|truncatechars:60 }}</strong></td>
+                                                    <td  title="{{ a.cpb_comprobante.entidad}}" ><strong>{{ a.cpb_comprobante.entidad.apellido_y_nombre|truncatechars:60 }}</strong></td>
+                                                    <td ><strong>{{ a.cpb_comprobante.entidad.get_nro_doc_cuit|default_if_none:'' }}</strong></td>
+                                                    <td ><strong>{{ a.cpb_comprobante.entidad.get_categFiscal|default_if_none:'' }}</strong></td>
                                                     <td class="importe">${{a.importe|default_if_none:0|floatformat:2}}</td>
                                                     <td class="importe">{{a.get_iva|default_if_none:0|floatformat:2}}</td>
                                                     <td class="importe">${{a.importe_final|default_if_none:0|floatformat:2}}</td>
@@ -151,7 +161,9 @@
                                                     <th></th>
                                                     <th></th>    
                                                     <th></th>    
-                                                    <th></th>                                                               
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
                                                     <th class="importe"></th>                                 
                                                     <th class="importe"></th>                                 
                                                     <th class="importe"></th>                                                                 
@@ -379,7 +391,7 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                 }
             };
             
-            let col_tot_sum =[5, 6, 7, 8, 9, 10{% if empresa.usa_impuestos %}, 11, 12{% endif %}]
+            let col_tot_sum =[7, 8, 9, 10, 11, 12{% if empresa.usa_impuestos %}, 13, 14{% endif %}]
             col_tot_sum.forEach(function (col_number) {
                 pageTotal = api.column(col_number, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
                 $( api.column(col_number).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));
@@ -560,10 +572,10 @@ var tabla = $('#dataTables-cpb_venta_alic').DataTable({
                     return 0
                 }
             };            
-            pageTotal = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));      
             pageTotal = api.column(6, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));      
+            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));
+            pageTotal = api.column(8, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
+            $( api.column(8).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));
             
                              
         }
