--- a/templates/general/facturas/detalle_factura.html
+++ b/templates/general/facturas/detalle_factura.html
@@ -46,7 +46,8 @@
     <th class="borde_izq borde_arriba borde_abajo tabla_header" width="10%">Cantidad</th>     
     <th class="borde_arriba borde_abajo tabla_header" width="55%">Descripción</th>         
     <th class="  borde_arriba borde_abajo tabla_header" width="10%">Precio Unit.</th>    
-    <th class="  borde_arriba borde_abajo tabla_header" width="10%">IVA</th>    
+    <th class="  borde_arriba borde_abajo tabla_header" width="10%">% Desc.</th>
+    <th class="  borde_arriba borde_abajo tabla_header" width="10%">IVA</th>
     <th class="listado_der borde_der  borde_arriba borde_abajo tabla_header" width="15%">Total</th>
   </thead>
   <tbody>
@@ -55,6 +56,7 @@
       <td class="listado_der borde_izq">{{item.cantidad|default_if_none:0|floatformat:2}} {{item.producto.get_unidad_display}}</td>
       <td class="listado_izq borde_izq">{{item.producto}} {% if item.detalle %} - {{item.detalle}}{% endif %}</td>    
       <td class="listado_der borde_izq">${{item.importe_unitario|default_if_none:0|floatformat:2}}</td>      
+      <td class="listado_der borde_izq">${{item.porc_dcto|default_if_none:0|floatformat:2}}</td>
       <td class="listado_der borde_izq">{{item.tasa_iva|default_if_none:''}}</td>
       <td class="listado_der borde_der borde_izq">${{item.importe_total|default_if_none:0|floatformat:2}}</td>
     </tr>       
@@ -62,7 +64,7 @@
   </tbody>
   <tfoot>
      <tr>
-       <th colspan="3"></th>
+       <th colspan="4"></th>
        <th class="texto_der">Total:</th>
        <th>${{cpb.importe_total|default_if_none:0|floatformat:2}}</th>
      </tr>
