--- a/templates/reportes/varios/costo_producto_vendido.html
+++ b/templates/reportes/varios/costo_producto_vendido.html
@@ -37,10 +37,13 @@
                         <th class="text-center">Fecha Mov.</th>
                         <th class="text-left">Nº CPB</th>
                         <th class="text-left">Tipo</th>
-                        <th class="">Producto</th>                                                                
+                        <th class="text-left" data-priority="9" >Cliente</th>
+                        <th class="">Producto</th>
                         <th>Categoría</th>                        
                         <th class="text-right">Cantidad</th>                                                
+                        <th class="text-right">% Desc</th>
                         <th class="text-right">Total Costo</th>
+                        <th class="text-right">Total Costo c/Imp.</th>
                         <th class="text-right">Total Venta</th>
                         <th class="text-right">Diferencia</th>
 
@@ -59,15 +62,23 @@
                                     </a>
                                 </td>
                                 <td class="text-center" title="{{ cpb.cpb_tipo|default_if_none:'' }}">{{ cpb.cpb_tipo.codigo|default_if_none:'' }}</td>
-                            {% endwith %}                            
+
+                            <td  title="{{ cpb.entidad}}" >
+                                        <a title="{{ cpb.entidad.detalle_entidad}}" ><strong>{{ cpb.entidad|truncatechars:60 }}</strong></a>
+                            </td>
+                            {% endwith %}
+
                             <td {% if m.producto.baja %} title='DADO DE BAJA' {% endif %}>
                                 {% if m.producto %} <a href="{% url 'producto_ver' id=m.producto.pk %}" class="modal-detail" data-modal-head="DETALLE PRODUCTO {{m.producto.codigo}}"
                                                        data-modal-callback="reload">{% endif %}
+
                             <strong>{{m.producto|default_if_none:''|truncatechars:60}}</strong></a></td>           
                             <td>{{ m.producto.categoria|default_if_none:'' }}</td>
                             <td class="importe">{{m.cantidad|default_if_none:0|floatformat:2}}[{{m.producto.get_unidad_display|default_if_none:''}}]</td>
+                            <td class="importe">{{m.porc_dcto|default_if_none:0|floatformat:2}}%</td>
                             <td class="importe">${{m.get_costo_total|default_if_none:0|floatformat:2}}</td>
-                            <td class="importe">${{m.importe_subtotal|default_if_none:0|floatformat:2}}</td>
+                            <td class="importe">${{m.get_costo_cimp_total|default_if_none:0|floatformat:2}}</td>
+                            <td class="importe">${{m.importe_total|default_if_none:0|floatformat:2}}</td>
                             <td class="importe">${{m.get_utilidad_total|default_if_none:0|floatformat:2}}</td>
                         </tr>
                     {% endfor %}                        
@@ -77,11 +88,14 @@
                         <th></th> 
                         <th></th> 
                         <th></th>
+                        <th></th>
                         <th></th>                                                                 
                         <th></th>                        
                         <th class="importe"></th>
-                        <th class="importe"></th>   
-                        <th class="importe"></th>   
+                        <th class="importe"></th>
+                        <th class="importe"></th>
+                        <th class="importe"></th>
+                        <th class="importe"></th>
                         <th class="importe"></th>                                   
                     </tr>
                 </tfoot>
@@ -298,12 +312,14 @@ var tabla = $('#dataTables-historico').DataTable({
             };
                         
                         
-             pageTotal = api.column(6, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 )
-            $( api.column(6).footer() ).html(pageTotal.toFixed(2));
-            pageTotal = api.column(7, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 )
-            $( api.column(7).footer() ).html(pageTotal.toFixed(2));
-            pageTotal = api.column(8, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 )
-            $( api.column(8).footer() ).html(pageTotal.toFixed(2));           
+            pageTotal = api.column(6, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
+                $( api.column(6).footer() ).html(pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));
+
+            let col_tot_sum =[8, 9, 10, 11]
+            col_tot_sum.forEach(function (col_number) {
+                pageTotal = api.column(col_number, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
+                $( api.column(col_number).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));
+            });
             
             
             }
