--- a/templates/general/facturas/orden_pago.html
+++ b/templates/general/facturas/orden_pago.html
@@ -52,13 +52,13 @@
         <td class="texto_der borde_izq">Dirección:</td>
         <td class="texto_izq">{% if cpb.entidad.fact_direccion %}{{cpb.entidad.fact_direccion|default_if_none:''|upper}}{% else %}{{cpb.entidad.domicilio|default_if_none:''|upper}}{% endif %}</td>
         <td class="texto_der" width="9%">Provincia:</td>
-        <td width="18%" class="texto_izq borde_der">{{cpb.entidad.get_provincia_display|upper}}</td>
+        <td width="18%" class="texto_izq borde_der">{{cpb.entidad.get_provincia_display|default_if_none:''|upper}}</td>
       </tr>
       <tr>
         <td class="texto_der borde_izq borde_abajo">I.V.A.:</td>
         <td class="texto_izq borde_abajo">{{cpb.entidad.get_fact_categFiscal_display|default_if_none:''|upper}}</td>
-        <td class="texto_der borde_abajo" width="9%">CUIT:</td>
-        <td width="18%" class="texto_izq borde_der borde_abajo">{{cpb.entidad.fact_cuit|default_if_none:''}}</td>
+        <td class="texto_der borde_abajo" width="9%">{{cpb.entidad.get_tipo_doc_display|default_if_none:'CUIT/DNI'|upper}}:</td>
+        <td width="18%" class="texto_izq borde_der borde_abajo">{{cpb.entidad.get_nro_doc_cuit|default_if_none:''|upper}}</td>
       </tr> 
       <tr>
         <td class="texto_der borde_izq">Observaciones:</span></td>
