Modificado el msj de vencimiento de abono

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
       {% endblock extra_js_final %} 
       {% if empresa.afip_categoria %}
         <script type="text/javascript">
-           alertify.warningAlert("<b>Su abono Mensual se encuentra Vencido.<br>Por favor comunicarse al (+34) 657 274 449 (WhatsApp).<br>¡Muchas Gracias!</b>");                 
+           alertify.warningAlert("<b>Su abono Mensual se encuentra impago<br>(recuerde que el mismo vence el 15 de cada mes)<br>Por favor comunicarse al (+34) 657 274 449 (WhatsApp).<br>¡Muchas Gracias!</b>");
            </script>   
       {% endif %} 
 </html>
