--- a/templates/egresos/ordenpago/cpb_rec_pago_listado.html
+++ b/templates/egresos/ordenpago/cpb_rec_pago_listado.html
@@ -299,7 +299,7 @@ var tabla = $('#dataTables-pagos').DataTable({
 
 
 
- $("a[name='mandarEmail']").click(function() {
+$("a[name='mandarEmail']", tabla.rows().nodes()).click(function() {
         var id = $(this).attr('value');
         datos = []
         $.ajax({
