--- a/templates/egresos/remitos/cpb_remito_listado.html
+++ b/templates/egresos/remitos/cpb_remito_listado.html
@@ -238,7 +238,7 @@ var tabla = $('#dataTables-cpb_remito').DataTable({
 
 
 
- $("a[name='mandarEmail']").click(function() {
+$("a[name='mandarEmail']", tabla.rows().nodes()).click(function() {
         var id = $(this).attr('value');
         datos = []
         $.ajax({
