Modificado el link innecesario de mandarEmail en ventas

--- a/templates/ingresos/ventas/cpb_venta_listado.html
+++ b/templates/ingresos/ventas/cpb_venta_listado.html
@@ -51,7 +51,7 @@
                                 <tr>
                                     <th class="no-sort text-center" data-priority="1"></th>
                                     <th class="no-sort text-center" data-priority="2"></th>
-                                    <th class="no-sort text-center" data-priority="3"></th>
+                                    <th class="no-sort text-center" data-priority="3"><input type="checkbox" id="checkall" title="Seleccionar Todos"/></th>
                                     <th class="imprimir text-center" data-priority="6">Cobranza</th>
                                     <th class="text-center" data-priority="8">CAE</th>
                                     <th class="imprimir text-center" data-priority="4">Fecha CPB</th>
