Discrimina IVA y nueva leyenda

--- a/templates/general/facturas/factura.html
+++ b/templates/general/facturas/factura.html
@@ -195,7 +195,7 @@
               <img  src="{% static 'images/logo_afip.png' %}" alt="afip" width="80" height="20" align="center" />
               <span class="cae_autorizado" align="right">Comprobante Autorizado</span>
             </div>
-            <span class="cae_leyenda">La Administración Federal no se responsabiliza por los datos ingresados en el detalle de la operación</span>
+            <span class="cae_leyenda">Régimen de Transparencia Fiscal al Consumidor Ley 27.743</span>
             <div align="center">
               <span align="texto_izq">CAE Nº:{{cpb.cae}}</span>
               <span align="texto_der">Fecha Vto.CAE:{{cpb.cae_vto|date:'d/m/Y'}}</span>
