--- a/templates/menues.html
+++ b/templates/menues.html
@@ -115,6 +115,66 @@
           </ul>
         </li>
         {% endif %}
+        {% if permisos_trabajos %}
+        <li class="mega-menu-dropdown">
+          <a data-toggle="dropdown" href="javascript:;" class="dropdown-toggle hover-initialized"  data-hover="dropdown" data-close-others="true">
+          PEDIDOS/TRABAJOS <i class="fa fa-angle-down"></i>
+          </a>
+          <ul class="dropdown-menu" style="min-width: 200px;">
+            <li>
+              <!-- Content container to add padding -->
+              <div class="mega-menu-content">
+                {% if 'trab_pedidos' in permisos_grupo %}
+                <div class="row">
+                  <div class="col-sm-12">
+                    <ul class="mega-menu-submenu">
+                      <li>
+                        <h3>ORDEN DE PEDIDO</h3>
+                      </li>
+                      <li>
+                        <a href="{% url 'orden_pedido_listado' %}"><i class="icon-notebook"></i>Orden de Pedido</a>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+                {% endif %}
+                {% if 'trab_trabajos' in permisos_grupo %}
+                <div class="row">
+                  <div class="col-sm-12">
+                    <ul class="mega-menu-submenu">
+                      <li>
+                        <h3>ORDEN DE TRABAJO</h3>
+                      </li>
+                      <li>
+                        <a href="{% url 'orden_trabajo_listado' %}"><i class="icon-notebook"></i>Orden de Trabajo</a>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+               {% endif %}
+               {% if 'trab_colocacion' in permisos_grupo %}
+               <div class="row">
+                  <div class="col-sm-12">
+                    <ul class="mega-menu-submenu">
+                      <li>
+                        <h3>ORDEN COLOCACION</h3>
+                      </li>
+                      <li>
+                        <a href="{% url 'orden_colocacion_listado' %}"><i class="icon-notebook"></i>Orden de Colocación</a>
+                      </li>
+
+                    </ul>
+                  </div>
+
+                </div>
+                {% endif %}
+              </div>
+            </li>
+          </ul>
+        </li>
+        {% endif %}
         {% if permisos_entidades or permisos_productos %}
         <li class="mega-menu-dropdown">
           <a data-toggle="dropdown" href="javascript:;" class="dropdown-toggle hover-initialized"  data-hover="dropdown" data-close-others="true">
