--- a/templates/header.html
+++ b/templates/header.html
@@ -56,6 +56,10 @@
                     <li class="divider"></li> 
                     {% endif %}  
                     <li>
+                      <a href="/media/manual/manual_usuario.html" target="_blank"><i class="icon-book-open"></i> Manual de Usuario</a>
+                    </li>
+                    <li class="divider"></li> 
+                    <li>
                       <a href="{% url 'logout' %}"><i class="icon-logout"></i> Salir</a>
                     </li>
                   </ul>
